<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkk"
    tools:context=".Signin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center|top"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"

            android:background="#00000000"
            android:padding="60dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/god" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="marathi"
                android:padding="10dp"
                android:text="मराठी" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   |   " />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="english"
                android:padding="10dp"
                android:text="English" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@drawable/bkfront">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/karma_light"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="\n" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/enter_your_register_mobile_number"
                        android:textColor="#070707" />

                    <EditText
                        android:id="@+id/et_uname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_field"
                        android:ems="10"
                        android:fontFamily="@font/karma_light"
                        android:hint="@string/enter_your_register_mobile_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/enter_password"
                        android:textColor="#070707" />

                    <EditText
                        android:id="@+id/et_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_field"
                        android:ems="10"
                        android:fontFamily="@font/karma_light"
                        android:hint="@string/enter_password"
                        android:inputType="textVisiblePassword"
                        android:padding="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/txt_forgetpassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:onClick="forgetpassword"
                            android:text="@string/forget_password" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_corner"
                            android:onClick="login"
                            android:text="@string/login"
                            android:textAllCaps="false" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/karma_light"
                        android:gravity="right"
                        android:text="@string/don_t_have_an_account" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/karma_bold"
                        android:gravity="left"
                        android:onClick="signup"
                        android:padding="5dp"
                        android:text="@string/sign_up"
                        android:textColor="#2C2B2B"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>