<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewHome">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="horizontal">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btmbar"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layoutAnimation="@anim/layout_animation_fall_down"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="home"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="home"
                        android:padding="5dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_baseline_home_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/karma_bold"
                        android:gravity="center"
                        android:onClick="home"
                        android:text="@string/home"
                        android:textColor="@color/purple_200" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="feesdetails"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="feesdetails"
                        android:padding="5dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_baseline_audiotrack_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/karma_bold"
                        android:gravity="center"
                        android:onClick="feesdetails"
                        android:text="@string/find_match"
                        android:textColor="@color/purple_200" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="files"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="files"
                        android:padding="5dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_baseline_perm_identity_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/karma_bold"
                        android:gravity="center"
                        android:onClick="files"
                        android:text="@string/profile"
                        android:textColor="@color/purple_200" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>